--- a/src/components/hives/hive.scss
+++ b/src/components/hives/hive.scss
@@ -1,12 +1,13 @@
 .hive-wrapper {
-  background-color: white;
-  min-height: 400px;
-  min-width: 300px;
-  max-height: 400px;
-  max-width: 300px;
-  margin: 0 15px;
-  padding: 15px 25px;
-  box-shadow: 1px 2px 2px 2px #eee;
+  // background-color: white;
+  // min-height: 400px;
+  // min-width: 300px;
+  // max-height: 400px;
+  // max-width: 300px;
+  // margin: 0 15px;
+  // padding: 15px 25px;
+  // box-shadow: 1px 2px 2px 2px #eee;
+  color: #454a53;
 }
 
 .hive-header {
@@ -28,16 +29,46 @@
   background-position: center center;
   width: auto;
   height: 100px;
-  padding: 35px;
+  // padding: 35px;
+  line-height: 100px;
 }
 
 .hive-details {
   padding-top: 10px;
   text-align: left;
-  font-weight: bold;
+  // font-weight: bold;
 }
 
 .hive-value {
   display: flex;
   justify-content: space-between;
+}
+
+.dot {
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 0.5rem;
+  background-color: #eee;
+
+  &.green {
+    background-color: #00e251;
+  }
+
+  &.yellow {
+    background-color: #ffb501;
+  }
+
+  &.purple {
+    background-color: #8c59c8;
+  }
+
+  &.light-blue {
+    background-color: #4e9ce0;
+  }
+
+  &.orange {
+    background-color: #df6c17;
+  }
 }
