Add buttons and some logic to stake view

--- a/src/assets/css/light-mode.scss
+++ b/src/assets/css/light-mode.scss
@@ -9,6 +9,13 @@ $primary-color: #7f63f4;
   border: none !important;
 }
 
+.bg-main-white {
+  background-color: white;
+  color: grey;
+  border-color: lightgray !important;
+  font-size: 0.8rem;
+}
+
 /**
 --------------
 Top Menu Navigation
