Add more styles and logic

--- a/src/assets/css/light-mode.scss
+++ b/src/assets/css/light-mode.scss
@@ -261,4 +261,16 @@ Dark Mode
   margin: 6px;
   box-shadow: 1px 2px 2px 2px #eee;
   border: none;
+  color: #808389;
+  font-weight: 600;
+}
+
+.pool-titles {
+  color: #808389;
+  font-weight: 600;
+}
+
+.pool-info {
+  color: #808389 !important;
+  font-weight: 300;
 }
