--- a/src/assets/css/dark-mode.scss
+++ b/src/assets/css/dark-mode.scss
@@ -8,42 +8,6 @@ Top Menu Navigation
   background: #2f2f2f;
 }
 
-/**
---------------
-Left Navigation
---------------
-**/
-.navbar {
-  height: 10vh !important;
-}
-
-.leftNav {
-  width: 48px;
-  white-space: nowrap;
-  transition: width 0.5s;
-  position: absolute;
-  z-index: 1;
-  height: 90%;
-}
-.leftNav ul {
-  padding: 0;
-  list-style-type: none;
-  text-align: left;
-}
-.leftNav li {
-  width: auto;
-  height: 60px;
-  line-height: 50px;
-  padding-left: 15px;
-}
-.leftNav li:hover {
-  background: black;
-}
-
-.leftNav:hover {
-  width: 250px;
-}
-
 .leftNav .item-menu {
   height: 50px;
   overflow: hidden;
@@ -56,56 +20,6 @@ Left Navigation
 }
 span.menu {
   padding-left: 17px;
-}
-
-/**
-----------------
-DASHBOARD GENERAL 
-----------------
-**/
-.box-1 {
-  background: linear-gradient(to right, #e36cd9 5%, #fe60ae 90%);
-}
-
-.box-2 {
-  background: linear-gradient(to right, #f48665 5%, #fda23f 90%);
-}
-
-.box-3 {
-  background: linear-gradient(to right, #9a56ff 5%, #d78afd 90%);
-}
-
-.box-4 {
-  background: linear-gradient(to right, #23bdb8 5%, #43e794 90%);
-}
-
-.box-farm ul {
-  list-style: none; /* Remove default bullets */
-}
-.box-farm ul li:nth-child(1)::before,
-.box-farm ul li:nth-child(2)::before,
-.box-farm ul li:nth-child(3)::before,
-.box-farm ul li:nth-child(4)::before,
-.box-farm ul li:nth-child(5)::before {
-  content: '\2022';
-  display: inline-block;
-  width: 1em;
-  font-weight: bolder;
-}
-.box-farm ul li:nth-child(1)::before {
-  color: #00e251;
-}
-.box-farm ul li:nth-child(2)::before {
-  color: #ffb500;
-}
-.box-farm ul li:nth-child(3)::before {
-  color: #8c58c8;
-}
-.box-farm ul li:nth-child(4)::before {
-  color: #ef3790;
-}
-.box-farm ul li:nth-child(5)::before {
-  color: #4e9ce0;
 }
 
 /**
@@ -131,7 +45,7 @@ Dark Mode
   color: #ffffff !important;
 }
 
-.main-content {
+.dark-mode .main-content {
   background: #192039 !important;
   color: #c2c2c2 !important;
   min-height: 100vh !important;
