--- a/src/assets/css/light-mode.scss
+++ b/src/assets/css/light-mode.scss
@@ -16,86 +16,20 @@ $primary-color: #7f63f4;
   font-size: 0.8rem;
 }
 
-/**
---------------
-Top Menu Navigation
---------------
-**/
-
-.navbar {
-  background: #2f2f2f;
-}
-
-.justify-content-end {
-  justify-content: flex-end;
-}
-
-.navbar-expand-lg {
-  justify-content: space-between;
-}
-
-.navbar {
-  height: 10vh !important;
-}
-
-/**
---------------
-Left Navigation
---------------
-**/
-
-.sidebar {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 100;
-  padding: 10vh 0 0;
-}
-
-.sidebar-sticky {
-  position: sticky;
-  top: 0;
-  height: calc(100vh - 10vh);
-  padding-top: 0.5rem;
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
-.leftNav {
-  width: 48px;
-  white-space: nowrap;
-  transition: width 0.5s;
-  position: absolute;
-  z-index: 1;
-  height: 90%;
-  box-shadow: 5px 0 1px -3px #eee;
-}
-.leftNav ul {
-  padding: 0;
-  list-style-type: none;
-  text-align: left;
-}
-.leftNav li {
-  width: auto;
-  height: 60px;
-  line-height: 50px;
-  padding-left: 15px;
-}
-.leftNav li:hover {
+.light-mode .leftNav li:hover {
   background: #f1eeff;
 }
 
-.leftNav:hover {
+.light-mode .leftNav:hover {
   width: 250px;
 }
 
-.leftNav .item-menu {
+.light-mode .leftNav .item-menu {
   height: 50px;
   overflow: hidden;
   color: #7c6ebb;
 }
-.leftNav a {
+.light-mode .leftNav a {
   color: white;
   text-decoration: none;
   font-weight: bold;
@@ -105,58 +39,8 @@ span.menu {
 }
 
 /**
-----------------
-DASHBOARD GENERAL 
-----------------
-**/
-.box-1 {
-  background: linear-gradient(to right, #e36cd9 5%, #fe60ae 90%);
-}
-
-.box-2 {
-  background: linear-gradient(to right, #f48665 5%, #fda23f 90%);
-}
-
-.box-3 {
-  background: linear-gradient(to right, #9a56ff 5%, #d78afd 90%);
-}
-
-.box-4 {
-  background: linear-gradient(to right, #23bdb8 5%, #43e794 90%);
-}
-
-.box-farm ul {
-  list-style: none; /* Remove default bullets */
-}
-.box-farm ul li:nth-child(1)::before,
-.box-farm ul li:nth-child(2)::before,
-.box-farm ul li:nth-child(3)::before,
-.box-farm ul li:nth-child(4)::before,
-.box-farm ul li:nth-child(5)::before {
-  content: '\2022';
-  display: inline-block;
-  width: 1em;
-  font-weight: bolder;
-}
-.box-farm ul li:nth-child(1)::before {
-  color: #00e251;
-}
-.box-farm ul li:nth-child(2)::before {
-  color: #ffb500;
-}
-.box-farm ul li:nth-child(3)::before {
-  color: #8c58c8;
-}
-.box-farm ul li:nth-child(4)::before {
-  color: #ef3790;
-}
-.box-farm ul li:nth-child(5)::before {
-  color: #4e9ce0;
-}
-
-/**
 --------------
-Dark Mode
+Light Mode
 --------------
 **/
 .MuiDialogContent-root,
@@ -166,25 +50,25 @@ Dark Mode
   position: relative;
 }
 
-.dark-mode,
-.dark-mode .leftNav,
-.dark-mode .navbar {
+.light-mode,
+.light-mode .leftNav,
+.light-mode .navbar {
   background-color: #fff !important;
   color: #c2c2c2 !important;
 }
 
-.dark-mode .navbar a {
+.light-mode .navbar a {
   color: #ffffff !important;
 }
 
-.main-content {
+.light-mode.main-content {
   background: #f3f6f9 !important;
   color: #c2c2c2 !important;
   min-height: 100vh !important;
   padding-top: 10vh;
 }
 
-.dark-mode .pageHeader {
+.light-mode .pageHeader {
   height: 40px;
   padding-left: 80px;
   padding-top: 6px;
@@ -194,12 +78,12 @@ Dark Mode
   font-weight: bold;
 }
 
-.dark-mode .box-farm {
+.light-mode .box-farm {
   min-height: 250px;
   background: #fff;
 }
 
-.dark-mode .section-title {
+.light-mode .section-title {
   color: #7f63f4;
   font-weight: bold;
 }
