--- a/src/components/hives/hive.scss
+++ b/src/components/hives/hive.scss
@@ -8,6 +8,24 @@
   // padding: 15px 25px;
   // box-shadow: 1px 2px 2px 2px #eee;
   color: #454a53;
+  margin-bottom: 2rem;
+}
+
+.hive-logo {
+  padding-bottom: 1rem;
+  margin: 0;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.hive-image {
+  max-height: 10vh;
 }
 
 .hive-header {
