exchange unit price style dark/ilght

--- a/src/assets/css/dark-mode.scss
+++ b/src/assets/css/dark-mode.scss
@@ -138,3 +138,8 @@ Dark Mode
   background-color: #7f63f4;
   padding: 0.2em 1.4em !important;
 }
+
+/* exchange */
+.dark-mode .unit-price {
+  color: #c2c2c2;
+}
