leftnav padding left active item

--- a/src/assets/css/dark-mode.scss
+++ b/src/assets/css/dark-mode.scss
@@ -24,7 +24,9 @@ Top Menu Navigation
 }
 
 .dark-mode .active > li {
-  background-color: #192039;
+  background-color: #2e3359;
+  border-left: 2px solid #7d64fb;
+  padding-left: 13px;
 }
 
 .leftNav .item-menu {
