WIP Add methods for LP tokens

--- a/src/assets/css/dark-mode.scss
+++ b/src/assets/css/dark-mode.scss
@@ -47,6 +47,10 @@ span.menu {
   background: #192039;
 }
 
+.dark-mode .leftNav:hover {
+  width: 170px;
+}
+
 .dark-mode .navbar {
   background-color: #262c47 !important;
 }
