--- a/src/assets/css/light-mode.scss
+++ b/src/assets/css/light-mode.scss
@@ -24,6 +24,10 @@ $primary-color: #7f63f4;
   background: #f1eeff;
 }
 
+.light-mode .leftNav:hover {
+  width: 170px;
+}
+
 .light-mode .leftNav .item-menu {
   height: 50px;
   overflow: hidden;
