--- a/src/assets/css/light-mode.scss
+++ b/src/assets/css/light-mode.scss
@@ -61,6 +61,19 @@ Light Mode
   position: relative;
 }
 
+.light-mode .navbar-brand {
+  // display: block;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: url('../logo.png') no-repeat;
+  background-size: contain;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  background-size: contain;
+  height: 30px; /* Height of new image */
+}
+
 .light-mode,
 .light-mode .leftNav,
 .light-mode .navbar {
