Gray out buttons for unstake

--- a/src/assets/css/mode-common.scss
+++ b/src/assets/css/mode-common.scss
@@ -3,6 +3,10 @@
   line-height: 2.3em;
 }
 
+.unstake {
+  background-color: gray !important;
+}
+
 .pool-name {
   font-size: 1rem;
   font-weight: bold;
