--- a/src/assets/css/mode-common.scss
+++ b/src/assets/css/mode-common.scss
@@ -89,7 +89,7 @@
 .stake-header-text {
   // margin-top: -19vh;
   // margin-left: -1vw;
-  font-size: 0.65rem;
+  // font-size: 0.65rem;
 }
 
 button:disabled {
