gas to header BS-9

--- a/src/assets/css/light-mode.scss
+++ b/src/assets/css/light-mode.scss
@@ -82,7 +82,7 @@ Light Mode
 }
 
 .light-mode .navbar a {
-  color: #ffffff !important;
+  // color: black !important;
 }
 
 .light-mode.main-content {
