BS-36 embed youtube bees channel

--- a/src/assets/css/dark-mode.scss
+++ b/src/assets/css/dark-mode.scss
@@ -193,3 +193,7 @@ Dark Mode
 .dark-mode .MuiInputBase-input {
   color: white;
 }
+
+.dark-mode .whaletank-wrapper {
+  color: white !important;
+}
