--- a/src/assets/css/mode-common.scss
+++ b/src/assets/css/mode-common.scss
@@ -99,3 +99,20 @@ button:disabled {
 .dropdown-item {
   font-size: 0.9em;
 }
+
+.video-responsive {
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  position: relative;
+  height: 0;
+}
+
+.video-responsive iframe {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  max-height: 560;
+  max-width: 315;
+  position: absolute;
+}
